--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.17",
-    "@heroicons/vue": "^2.1.1",
-    "@tauri-apps/api": "^2.0.0-beta.6",
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/vue": "^2.1.4",
+    "@tauri-apps/api": "^2.0.0-beta.13",
+    "@tauri-apps/plugin-os": "^2.0.0-beta.5",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.6",
+    "@tauri-controls/vue": "^0.4.0",
     "@unovis/ts": "^1.4.1",
     "@unovis/vue": "^1.4.1",
     "@vee-validate/zod": "^4.13.1",
@@ -23,28 +25,29 @@
     "embla-carousel-vue": "^8.1.5",
     "fzf": "^0.5.2",
     "lucide-vue-next": "^0.395.0",
-    "radix-vue": "^1.8.3",
+    "radix-vue": "^1.8.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.13.1",
-    "vue": "^3.3.4",
+    "vue": "^3.4.29",
+    "vue-router": "4",
     "vue-sonner": "^1.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@headlessui/tailwindcss": "^0.2.0",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tauri-apps/cli": "^2.0.0-beta.20",
-    "@types/node": "^20.14.6",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/runtime-core": "^3.4.15",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5"
+    "@types/node": "^20.14.8",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vue/runtime-core": "^3.4.29",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
+    "vue-tsc": "^1.8.27"
   }
 }
