--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,9 @@ rdkafka = { version = "0.25" }
 futures = "0.3.30"
 tauri-plugin-shell = "2.0.0-beta.7"
 regex = "1.10.5"
+# tauri-plugin-window = "2.0.0-alpha.2"
+tauri-plugin-os = "2.0.0-beta.6"
+tauri-plugin-theme = "0.4.1"
 
 [lib]
 name = "app_lib"
