--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
@@ -25,14 +25,14 @@
     "embla-carousel-vue": "^8.1.5",
     "fzf": "^0.5.2",
     "lucide-vue-next": "^0.395.0",
-    "radix-vue": "^1.8.4",
+    "radix-vue": "^1.8.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.13.1",
-    "vue": "^3.4.29",
-    "vue-router": "4",
+    "vue": "^3.4.30",
+    "vue-router": "^4.4.0",
     "vue-sonner": "^1.1.3",
     "zod": "^3.23.8"
   },
@@ -40,14 +40,14 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tauri-apps/cli": "^2.0.0-beta.20",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/runtime-core": "^3.4.29",
+    "@vue/runtime-core": "^3.4.30",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2",
-    "vite": "^5.3.1",
-    "vue-tsc": "^1.8.27"
+    "vite": "^5.3.2",
+    "vue-tsc": "^2.0.22"
   }
 }
