--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rdkafka = { version = "0.25" }
 futures = "0.3.30"
+byteorder = "1.3.2"
 tauri-plugin-shell = "2.0.0-beta.7"
 regex = "1.10.5"
 # tauri-plugin-window = "2.0.0-alpha.2"
