--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ regex = "1.10.5"
 # tauri-plugin-window = "2.0.0-alpha.2"
 tauri-plugin-os = "2.0.0-beta.6"
 tauri-plugin-theme = "0.4.1"
+itertools = "0.13.0"
 
 [lib]
 name = "app_lib"
