--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@eslint/js": "^9.7.0",
     "@heroicons/vue": "^2.1.4",
     "@tauri-apps/api": "^2.0.0-beta.13",
     "@tauri-apps/plugin-os": "^2.0.0-beta.5",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.6",
     "@tauri-controls/vue": "^0.4.0",
+    "@typescript-eslint/parser": "^7.16.1",
     "@unovis/ts": "^1.4.1",
     "@unovis/vue": "^1.4.1",
     "@vee-validate/zod": "^4.13.1",
@@ -27,6 +29,7 @@
     "radix-vue": "^1.8.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript-eslint": "^7.16.1",
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.13.1",
@@ -42,6 +45,8 @@
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/runtime-core": "^3.4.30",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.7.0",
+    "eslint-plugin-vue": "^9.27.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2",
