--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ regex = "1.10.5"
 tauri-plugin-os = "2.0.0-beta.6"
 tauri-plugin-theme = "0.4.1"
 itertools = "0.13.0"
+tokio = "1.38.1"
 
 [lib]
 name = "app_lib"
