--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ tauri-plugin-os = "2.0.0-beta.6"
 tauri-plugin-theme = "0.4.1"
 itertools = "0.13.0"
 tokio = "1.38.1"
+tauri-plugin-devtools = "2.0.0-beta"
 
 [lib]
 name = "app_lib"
