--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ byteorder = "1.3.2"
 tauri-plugin-shell = "2.0.0-beta.7"
 regex = "1.10.5"
 # tauri-plugin-window = "2.0.0-alpha.2"
-tauri-plugin-os = "2.0.0-beta.6"
+tauri-plugin-os = "2.0.0-beta"
 tauri-plugin-theme = "0.4.1"
 itertools = "0.13.0"
 tokio = "1.38.1"
