refactor & fix missing messages being published before subscription.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@eslint/js": "^9.7.0",
     "@heroicons/vue": "^2.1.5",
-    "@tauri-apps/api": "^2.0.0-beta.15",
+    "@tauri-apps/api": "^2.0.0-beta",
     "@tauri-apps/plugin-os": "^2.0.0-beta.7",
     "@tauri-apps/plugin-shell": "^2.0.0-beta.8",
     "@tauri-controls/vue": "^0.4.0",
