use pinia stores for topics, config metadata

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-vue": "^8.1.7",
     "fzf": "^0.5.2",
     "lucide-vue-next": "^0.395.0",
+    "pinia": "^2.2.1",
     "radix-vue": "^1.9.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
